# anthropic-claude-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.es.md  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.example.json
.claude/agents/: eval-grader.md  researcher.md  reviewer.md
.claude/commands/: audit.md  eval.md  review.md
.claude/skills/code-audit/: SKILL.md
.claude/skills/commit-style/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.github/workflows/: anatomist-lint.yml  eval-pipeline.yml
docs/: BEST_PRACTICES.md  COST_MODEL.md  DECISIONS.md  EXTERNAL_VALIDATOR.md  PATTERNS.md
examples/: README.md  demo_chatbot.py
scripts/: anatomist-lint.py  init-claude.sh
scripts/hooks/: block_env.js  post_edit.sh
src/: budget.py  caching.py
src/eval/: pipeline.py  sample_dataset.json
src/mcp_servers/: demo.py
src/rag/: hybrid.py  sample_corpus.md
tests/tier1/: test_budget.py  test_rag_persistence.py  test_smoke.py
