[project]
name = "anthropic-claude-starter"
version = "0.1.0"
description = "Production-grade starter template for Anthropic Claude apps"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    # RAG
    "voyageai>=0.2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "tier1: deterministic tests, no tokens",
    "tier2: burns LLM tokens",
]
